--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<li>A imagem não existe mais, então irei passar um torrent a parte.</li>
 				<li>Na hora da configuração do virtual box, é pedido para desmarcar o EFI, isso não funcionou para mim.</li>
 				<li>Converta a imagem de ".dmg" para ".iso" se der problema.</li>
-				<li>Eu já baixei e deixei em um só download os programas principais, alguns precisam de burocracia e até instalar outros programas</li>
+				<li>Eu já baixei e deixei em um só download os programas principais, alguns precisam de burocracia e até instalar outros programas, se o download for feito a partir do site do proprietário</li>
 			</ul>
 		</p>
 		<p>
