--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
      <meta charset="UTF-8"/>
@@ -9,9 +9,9 @@
 </head>
 <body>
 	 <header>
-	 <img class="profile-picture" src="IMAGENS/anonymous.png">
-	 	<h1>José Alberto</h1>
-	 	<h2>Desenvolvedor de Software</h2>
+	 <img id="img_perfil" class="profile-picture">
+	 	<h1 id="nome_perfil"></h1>
+	 	<h2 id="cargo_perfil"></h2>
 	 </header>
 	 	
 	 <section>
@@ -79,5 +79,7 @@
 	 <footer>
 	 	Copyright &copy José Alberto - 2017
 	 </footer>
+
+	 <script src="SCRIPT/script.js"></script>
 </body>
 </html>
